feat(api): 更新 API 配置与请求处理，新增文件下载功能
- 修改 nuxt.config.ts，更新 apiBase 地址。
- 在 login.vue 中添加登录按钮并实现登录请求。
- 扩展 useApiFetch 组合函数，增加文件下载功能及相关文档。
- 更新 i18n 语言包，移除多余的错误信息。
- 优化 api.factory.ts，简化错误处理逻辑。
- 更新 api.ts，调整 API 响应结构与默认值。

--- a/src/runtime/i18n/locales/en.json
+++ b/src/runtime/i18n/locales/en.json
@@ -10,13 +10,7 @@
   "validation": {
     "success": "Request successful",
     "error": "Request failed",
-    "responseError": "Response error",
-    "networkError": "Network error",
-    "unauthorized": "Authentication failed, please log in again",
-    "forbidden": "Insufficient permissions to access this resource",
-    "notFound": "The requested resource does not exist",
-    "tooManyRequests": "Too many requests, please try again later",
-    "serverError": "Server error, please try again later"
+    "responseError": "Response error"
   },
   "colorMode": {
     "switchToLight": "Switch to light",
