feat: 重构项目从文档主题到模块生态系统
重大架构转型，将 @movk/nuxt-docs 文档主题重构为 @movk/nuxt 模块生态系统：

- 项目定位转变：从文档主题转为基于 Zod Schema 的自动表单生成模块
- 新增核心功能：AutoForm 自动表单系统，支持 20+ 种控件类型
- 文档内容更新：
  * 更新首页介绍，突出模块化生态系统特性
  * 重写安装指南，提供模块安装和配置说明
  * 重写简介页，介绍 AutoForm 核心优势和技术栈
- 导航优化：新增 AutoForm、示例、路线图等导航菜单
- 组件新增：Home、StarsBg、CommitChangelog 等页面组件
- 依赖升级：新增 @octokit/rest 依赖，支持 GitHub API 集成
- 新增内容：AutoForm 文档结构和 TODO 规划

BREAKING CHANGE: 项目从 @movk/nuxt-docs 文档主题完全转型为 @movk/nuxt 模块生态系统，现有文档主题用户需要重新评估迁移方案。

--- a/docs/content/docs/1.getting-started/2.installation.md
+++ b/docs/content/docs/1.getting-started/2.installation.md
@@ -1,44 +1,162 @@
 ---
 title: 安装
-description: 学习如何快速安装 Movk Nuxt Docs，并通过项目模板或层集成方式开始您的文档项目。
+description: 学习如何快速安装 Movk Nuxt 模块，并创建您的第一个自动表单。
+seo:
+  title: 安装 - Movk Nuxt
+  description: 详细的 Movk Nuxt 模块安装指南，包括环境要求、依赖配置和快速开始步骤。
 ---
 
-## 快速入门
+## 环境要求
 
-您可以通过以下命令快速启动一个全新的项目：
+在开始之前，请确保您的开发环境满足以下要求：
+
+- **Node.js**: >= 18.0.0
+- **Nuxt**: >= 4.2.0
+- **pnpm** (推荐) 或 npm/yarn
+
+## 安装步骤
+
+### 1. 创建 Nuxt 项目
+
+如果您还没有 Nuxt 项目，可以使用以下命令创建一个新项目：
 
 ```bash [Terminal]
-npx nuxi init -t gh:mhaibaraai/movk-nuxt-docs/templates/default my-docs
+npx nuxi init my-nuxt-app
+cd my-nuxt-app
 ```
 
-项目启动后，您可以在 <http://localhost:3000> 访问本地预览。
-
-### 作为 Layer 使用
-
-在现有 Nuxt 项目中使用 Movk Nuxt Docs 作为 layer：
+### 2. 安装依赖
 
 ```bash [Terminal]
-# 安装依赖
-pnpm add @movk/nuxt-docs better-sqlite3
+# 安装 Movk Nuxt 模块
+pnpm add @movk/nuxt
+
+# 安装必需的依赖
+pnpm add @nuxt/ui zod
 ```
 
-在 CSS 中导入 Tailwind CSS 和 Nuxt UI
+### 3. 配置模块
 
-```css [app/assets/css/main.css]
-@import 'tailwindcss';
-@import '@nuxt/ui';
-```
-
-在 `nuxt.config.ts` 中配置：
+在 `nuxt.config.ts` 中添加模块：
 
 ```ts [nuxt.config.ts]
 export default defineNuxtConfig({
-  extends: ['@movk/nuxt-docs'],
-  css: ['~/assets/css/main.css'],
-  llms: {
-    domain: 'https://docs.mhaibaraai.cn',
-    title: 'Movk Nuxt Docs',
-    description: '一款优雅的 Nuxt 文档主题'
+  modules: ['@movk/nuxt'],
+
+  // 可选：配置模块选项
+  movk: {
+    prefix: 'M' // 组件前缀，默认为 'M'
   }
 })
 ```
+
+### 4. 导入 CSS
+
+在您的 CSS 文件中导入必要的样式：
+
+```css [app/assets/css/main.css]
+@import '@nuxt/ui';
+```
+
+## 快速开始
+
+安装完成后，创建您的第一个表单：
+
+```vue [pages/index.vue]
+<script setup lang="ts">
+import { ref } from 'vue'
+import { z } from 'zod/v4'
+import { afz } from '@movk/nuxt/autoform'
+
+const { afz } = useAutoForm()
+
+const schema = afz.object({
+  username: afz.string().min(3),
+  email: afz.email(),
+  age: afz.number().min(18)
+})
+
+const form = ref({})
+
+async function handleSubmit(data) {
+  console.log('表单数据:', data)
+}
+</script>
+
+<template>
+  <div class="container mx-auto p-4">
+    <MAutoForm :schema="schema" :state="form" @submit="handleSubmit" />
+  </div>
+</template>
+```
+
+## 开发模式
+
+启动开发服务器查看效果：
+
+```bash [Terminal]
+pnpm dev
+```
+
+现在访问 `http://localhost:3000` 即可看到您的第一个自动表单！
+
+## 作为 Layer 使用
+
+如果您想在自己的 Nuxt 项目中使用 Movk Nuxt 作为 layer：
+
+```ts [nuxt.config.ts]
+export default defineNuxtConfig({
+  extends: ['@movk/nuxt'],
+  // 其他配置...
+})
+```
+
+## 常见问题
+
+### Q: 组件前缀可以修改吗？
+
+A: 可以。在 `nuxt.config.ts` 中通过 `movk.prefix` 选项修改：
+
+```ts
+export default defineNuxtConfig({
+  movk: {
+    prefix: 'MyForm' // 使用 'MyForm' 前缀
+  }
+})
+```
+
+### Q: 如何自定义控件？
+
+A: 详见 [自定义控件](/docs/advanced/custom-controls) 文档。
+
+### Q: 支持哪些 Zod 类型？
+
+A: 支持所有 Zod v4 内置类型，详见 [字段类型](/docs/field-types) 文档。
+
+## 下一步
+
+- [基础用法](/docs/basic-usage) - 学习如何使用 AutoForm 组件
+- [字段类型](/docs/field-types) - 了解支持的字段类型
+- [表单布局](/docs/layout) - 学习创建复杂表单布局
+- [高级用法](/docs/advanced) - 探索高级功能和自定义选项
+
+::card-group
+  :::card
+  ---
+  icon: i-lucide-book-open
+  target: _blank
+  title: 基础用法
+  to: /docs/basic-usage
+  ---
+  学习 AutoForm 组件的基础使用方法
+  :::
+  :::card
+  ---
+  icon: i-lucide-code
+  target: _blank
+  title: 字段类型
+  to: /docs/field-types
+  ---
+  了解所有支持的字段类型和配置选项
+  :::
+::
