--- a/docs/content/docs/1.getting-started/1.index.md
+++ b/docs/content/docs/1.getting-started/1.index.md
@@ -1,41 +1,71 @@
 ---
 title: 简介
-description: 了解 Movk Nuxt Docs 的核心功能，并学习如何快速上手，开启您的高效文档构建之旅。
+description: 了解 Movk Nuxt 模块的核心功能，并学习如何快速上手，开启您的高效表单开发之旅。
 seo:
-  title: 简介
-  description: 探索 Movk Nuxt Docs 的强大功能，学习如何利用它轻松创建、管理和发布美观、专业的文档网站。
+  title: 简介 - Movk Nuxt
+  description: 探索 Movk Nuxt 模块的强大功能，学习如何利用它轻松创建、管理和维护基于 Zod Schema 的自动表单系统。
 ---
 
-这是一个开箱即用的文档模板，基于 [Nuxt UI](https://ui.nuxt.com) 构建，旨在帮助您在几分钟内创建出美观且响应迅速的 Nuxt 应用。
+## 什么是 Movk Nuxt？
 
-## 什么是 Movk Nuxt Docs?
+Movk Nuxt 是一个基于 [Nuxt 4](https://nuxt.com) 的表单生成模块，它能够将 [Zod](https://zod.dev) Schema 自动转换为美观、交互式的表单界面。该模块构建在 [Nuxt UI](https://ui.nuxt.com) 组件库之上，提供开箱即用的表单解决方案。
 
-Movk Nuxt Docs 是一个基于 [UI 文档模板](https://docs-template.nuxt.dev/) 的主题。它不仅提供了精美的视觉风格，更让您能够专注于内容创作，充分利用 [Nuxt Content](https://content.nuxt.com) 提供的 Markdown 和 [MDC 语法](https://content.nuxt.com/docs/files/markdown#mdc-syntax)。
+## 核心优势
 
-我们在所有 Nuxt 模块文档中均采用了此主题，包括：
+- **类型安全**: 基于 Zod Schema 的完整类型推断，编译时即能发现类型错误
+- **高效开发**: 从 Schema 到表单的无缝转换，大幅提升开发效率
+- **灵活布局**: 支持 `$layout` 标记创建复杂表单布局
+- **丰富控件**: 内置 20+ 种表单控件，覆盖大部分业务场景
+- **响应式设计**: 自动适配各种屏幕尺寸，提供最佳用户体验
+- **完全可定制**: 支持自定义控件映射、元数据配置、表单 slots 等
+
+## 快速预览
+
+```typescript
+import { z } from 'zod/v4'
+import { afz } from '@movk/nuxt/autoform'
+
+// 定义 Schema
+const schema = afz.object({
+  username: afz.string().min(3),
+  email: afz.email(),
+  age: afz.number().min(18)
+})
+```
+
+```vue
+<template>
+  <MAutoForm :schema="schema" :state="form" @submit="handleSubmit" />
+</template>
+```
+
+这就是创建一个完整表单所需的全部代码！
+
+## 适用场景
+
+- 用户注册和登录表单
+- 产品信息录入表单
+- 问卷调查和数据收集
+- 管理后台的数据编辑页面
+- 任何需要表单交互的场景
+
+## 技术栈
+
+- [Nuxt 4](https://nuxt.com) - 现代化的 Vue.js 框架
+- [Nuxt UI](https://ui.nuxt.com) - 优雅的 UI 组件库
+- [Zod v4](https://zod.dev) - 类型安全的 Schema 验证库
+- [TypeScript](https://www.typescriptlang.org) - 提供完整的类型支持
+
+开始使用 Movk Nuxt，让表单开发变得简单高效！
 
 ::card-group
   :::card
   ---
-  icon: i-lucide-notebook
+  icon: i-lucide-rocket
   target: _blank
-  title: mhaibaraai.cn
-  to: https://mhaibaraai.cn
+  title: 快速开始
+  to: /docs/getting-started/installation
   ---
-  一个专注于技术分享与知识沉淀的个人网站
+  学习如何安装和配置 Movk Nuxt 模块
   :::
 ::
-
-## 主要特性
-
-此主题集成了一系列旨在优化文档管理体验的强大功能：
-
-- **基于** [**Nuxt 4**](https://nuxt.com)：充分利用最新的 Nuxt 框架，实现卓越性能。
-- **采用** [**Nuxt UI**](https://ui.nuxt.com)：集成全面的 UI 组件库，开箱即用。
-- **[**Nuxt Content**](https://content.nuxt.com) 驱动的 MDC 语法**：支持 Markdown 与 Vue 组件的无缝集成，实现动态内容。
-- **组件文档**：内置多个组件，可自动生成组件的 `Props`、`Slots`、`Emits` 文档，并创建交互式示例。
-- **自动生成侧边栏导航**：根据您的内容结构，智能生成侧边栏导航。
-- **全文搜索**：内置强大的全文搜索功能，便于快速发现内容。
-- **优化排版**：提供精心调校的排版，增强内容的可读性。
-- **暗黑模式**：支持暗黑模式，以适应不同用户的偏好。
-- **丰富功能**：探索此主题，发掘其全部潜力。
