docs: 精简文档内容并优化配置
- 移除快速开始文档中的 FAQ 和导航卡片
- 简化安装文档,移除验证安装和 IDE 配置章节
- 优化文档中的链接和提示样式
- 添加 content 组件自动注册配置
- 调整 TypeScript 代码示例,使用 z.output 替代 z.infer

--- a/docs/content/docs/1.getting-started/2.installation.md
+++ b/docs/content/docs/1.getting-started/2.installation.md
@@ -7,45 +7,30 @@ description: 在 Nuxt 项目中安装和配置 Movk Nuxt 模块
 
 在开始之前，请确保你的开发环境满足以下要求：
 
+::callout{color="neutral"}
 - **Node.js** - `18.x` 或更高版本
 - **Nuxt** - `4.2.0` 或更高版本
 - **包管理器** - pnpm、npm 或 yarn
+::
 
 ## 安装依赖
 
 ::code-group
 ```bash [pnpm]
-pnpm add @movk/nuxt @nuxt/ui
+pnpm add @movk/nuxt
 ```
 
 ```bash [npm]
-npm install @movk/nuxt @nuxt/ui
+npm install @movk/nuxt
 ```
 
 ```bash [yarn]
-yarn add @movk/nuxt @nuxt/ui
+yarn add @movk/nuxt
 ```
 ::
 
-::callout{icon="i-lucide-info"}
-Movk Nuxt 依赖 **@nuxt/ui** 提供基础组件，因此需要同时安装两个包。
-::
-
-## 配置模块
-
-在 `nuxt.config.ts` 中注册模块：
-
-```ts [nuxt.config.ts]
-export default defineNuxtConfig({
-  modules: [
-    '@nuxt/ui',
-    '@movk/nuxt'
-  ]
-})
-```
-
-::warning{icon="i-lucide-alert-triangle"}
-**重要**：确保 `@nuxt/ui` 在 `@movk/nuxt` 之前注册，因为 Movk Nuxt 需要 Nuxt UI 提供的基础设施。
+::tip
+Movk Nuxt 依赖 **@nuxt/ui** 提供基础组件。
 ::
 
 ## 模块配置
@@ -54,7 +39,7 @@ Movk Nuxt 支持以下配置选项：
 
 ```ts [nuxt.config.ts]
 export default defineNuxtConfig({
-  modules: ['@nuxt/ui', '@movk/nuxt'],
+  modules: ['@movk/nuxt'],
 
   movk: {
     // 组件前缀 (默认: 'M')
@@ -67,64 +52,19 @@ export default defineNuxtConfig({
 
 | 选项 | 类型 | 默认值 | 说明 |
 |------|------|--------|------|
-| `prefix` | `string` | `'M'` | 全局组件前缀，如 `MAutoForm`、`MAutoTable` 等 |
-
-## 验证安装
-
-创建一个简单的表单来验证安装是否成功：
-
-::code-group
-```vue [app.vue]
-<script setup lang="ts">
-const { afz } = useAutoForm()
-
-const schema = afz.object({
-  name: afz.string().meta({
-    label: '姓名',
-    placeholder: '请输入姓名'
-  })
-})
-
-function onSubmit(data: any) {
-  console.log('提交的数据:', data)
-}
-</script>
-
-<template>
-  <UContainer class="py-8">
-    <UCard>
-      <MAutoForm :schema="schema" @submit="onSubmit" />
-    </UCard>
-  </UContainer>
-</template>
-```
-::
-
-运行开发服务器：
-
-::code-group
-```bash [pnpm]
-pnpm dev
-```
-
-```bash [npm]
-npm run dev
-```
-
-```bash [yarn]
-yarn dev
-```
-::
-
-在浏览器中打开 `http://localhost:3000`，你应该能看到一个带有姓名输入框的表单。
+| `prefix`{lang="ts-type"} | `string` | `'M'` | 全局组件前缀，如 `MAutoForm`、`MAutoTable` 等 |
 
 ## TypeScript 支持
 
 Movk Nuxt 提供完整的 TypeScript 类型定义。安装后，类型会自动生成并注入到你的项目中。
 
+::tip
 你可以在 IDE 中享受完整的类型提示和自动补全：
+::
 
 ```ts
+import type { z } from 'zod/v4'
+
 // 类型会自动推断
 const { afz } = useAutoForm()
 
@@ -134,7 +74,7 @@ const schema = afz.object({
 })
 
 // 从 schema 推断数据类型
-type FormData = z.infer<typeof schema>
+type Schema = z.output<typeof schema>
 ```
 
 ## Zod v4 集成
@@ -164,82 +104,4 @@ const uuidSchema = z.string().uuid()
 
 ::tip{icon="i-lucide-book-open" to="https://zod.dev/api"}
 查看 [Zod 官方文档](https://zod.dev/api) 了解更多 v4 变更
-::
-
-## IDE 配置
-
-### VS Code
-
-推荐安装以下扩展以获得最佳开发体验：
-
-- [Vue - Official](https://marketplace.visualstudio.com/items?itemName=Vue.volar) - Vue 语言支持
-- [Tailwind CSS IntelliSense](https://marketplace.visualstudio.com/items?itemName=bradlc.vscode-tailwindcss) - Tailwind CSS 自动补全
-- [ESLint](https://marketplace.visualstudio.com/items?itemName=dbaeumer.vscode-eslint) - 代码检查
-
-### WebStorm / IntelliJ IDEA
-
-WebStorm 和 IntelliJ IDEA 内置了 Vue 和 TypeScript 支持，无需额外配置。
-
-## 常见问题
-
-::accordion
-:accordion-item{title="安装后找不到 MAutoForm 组件"}
-请确认：
-
-1. `@nuxt/ui` 和 `@movk/nuxt` 都已正确安装
-2. 模块在 `nuxt.config.ts` 中正确注册
-3. `@nuxt/ui` 在 `@movk/nuxt` 之前注册
-4. 重启开发服务器
-
-如果问题依然存在，尝试删除 `.nuxt` 目录并重新运行 `nuxt prepare`。
-:
-
-:accordion-item{title="TypeScript 类型提示不工作"}
-尝试以下步骤：
-
-1. 运行 `nuxt prepare` 生成类型文件
-2. 重启 IDE 或 TypeScript 语言服务
-3. 检查 `.nuxt/nuxt.d.ts` 文件是否存在
-4. 确认 `tsconfig.json` 继承了 `.nuxt/tsconfig.json`
-
-```json [tsconfig.json]
-{
-  "extends": "./.nuxt/tsconfig.json"
-}
-```
-:
-
-:accordion-item{title="与其他 Nuxt 模块冲突"}
-Movk Nuxt 设计为与大多数 Nuxt 模块兼容。如果遇到冲突：
-
-1. 确保所有模块都是最新版本
-2. 调整 `modules` 数组中的模块顺序
-3. 查看控制台错误信息，确定冲突来源
-4. 在 [GitHub Issues](https://github.com/movk/nuxt/issues) 报告问题
-:
-
-:accordion-item{title="Zod v3 项目如何迁移？"}
-如果你的项目使用 Zod v3，需要进行以下迁移：
-
-1. 更新到 Zod v4: `pnpm add zod@latest`
-2. 使用新的 API 替换旧的验证方法：
-   - `z.string().email()` → `z.email()`
-   - `z.string().url()` → `z.url()`
-   - `z.string().uuid()` → `z.uuid()`
-3. 查看 [Zod v4 迁移指南](https://zod.dev/migration)
-
-Movk Nuxt 的 `afz` 会自动处理这些新 API，无需额外配置。
-:
-::
-
-## 下一步
-
-::card-group
-:::card{icon="i-lucide-book" title="核心概念" to="/docs/auto-form/core-concepts"}
-了解 AutoForm 的核心设计理念和基本使用方式
-:::
-
-:::card{icon="i-lucide-code" title="示例" to="/examples"}
-查看更多实际应用示例
-:::
 ::
