docs: 优化文档内容和示例展示
- 快速开始页面使用 component-example 组件展示交互式示例
- 完善核心概念文档，添加默认值与合并逻辑说明
- 优化卡片组和提示框的格式
- 调整链接样式，移除冗余的链接文本

--- a/docs/content/docs/1.getting-started/2.installation.md
+++ b/docs/content/docs/1.getting-started/2.installation.md
@@ -103,5 +103,5 @@ const uuidSchema = z.string().uuid()
 ::
 
 ::tip{icon="i-lucide-book-open" to="https://zod.dev/api"}
-查看 [Zod 官方文档](https://zod.dev/api) 了解更多 v4 变更
+查看 Zod 官方文档了解更多 v4 变更
 ::
