docs: 重构文档结构和示例组件
- 删除旧的 AutoFormBasic.vue 示例
- 添加新的 AutoFormExample 和 AutoFormBasicExample 组件
- 拆分 core-concepts.md 为 core.md 和 api.md
- 新增 field 字段文档目录
- 优化 getting-started 文档内容和示例引用

--- a/docs/content/docs/1.getting-started/1.index.md
+++ b/docs/content/docs/1.getting-started/1.index.md
@@ -54,12 +54,13 @@ Movk Nuxt 基于以下现代技术构建：
 
 ::component-example
 ---
-name: "AutoFormBasic"
+name: 'auto-form-example'
 collapse: true
+prettier: false
+props:
+  class: 'px-4'
 ---
 ::
-
-
 
 ::tip{icon="i-lucide-book-open" to="/docs/auto-form"}
 深入了解 AutoForm 的核心概念和使用方法
