--- a/docs/content/docs/1.getting-started/2.installation.md
+++ b/docs/content/docs/1.getting-started/2.installation.md
@@ -7,7 +7,7 @@ description: 在 Nuxt 项目中安装和配置 Movk Nuxt 模块
 
 在开始之前，请确保你的开发环境满足以下要求：
 
-::callout{color="neutral"}
+::callout{color="info"}
 - **Node.js** - `18.x` 或更高版本
 - **Nuxt** - `4.2.0` 或更高版本
 - **包管理器** - pnpm、npm 或 yarn
