--- a/docs/content/docs/2.auto-form/1.core.md
+++ b/docs/content/docs/2.auto-form/1.core.md
@@ -1,5 +1,5 @@
 ---
-title: Core Concepts
+title: Core
 description: 了解 AutoForm 的核心设计理念和基本使用方式
 ---
 
@@ -28,7 +28,7 @@ const schema = afz.object({
 })
 ```
 
-::warning{icon="i-lucide-triangle-alert"}
+::warning
 
 为什么使用 afz 而不是原生 z？
 
@@ -139,7 +139,7 @@ afz.string().meta({
 })
 ```
 
-::warning{icon="i-lucide-info"}
+::note
 **合并优先级**：自动默认值 < 全局配置 < 字段级配置
 
 示例：如果全局设置 `size: 'lg'`，字段设置 `size: 'md'`，最终生效的是 `'md'`。
@@ -189,6 +189,7 @@ afz.string().meta({
 const schema = afz.object({
   email: afz.string({
     controlProps: {
+      // UInput 组件的所有属性都会被提示
       leadingIcon: 'i-lucide-at-sign',
       placeholder: 'example@email.com'
     }
@@ -227,51 +228,3 @@ const schema = afz.object({
   email: afz.email('请输入有效的邮箱地址')
 })
 ```
-
-## API
-
-### Props
-
-:component-props{slug=MAutoForm}
-
-### Slots
-
-:component-slots{slug=MAutoForm}
-
-### Emits
-
-:component-emits{slug=MAutoForm}
-
-### Expose
-
-使用 [`useTemplateRef`](https://cn.vuejs.org/guide/essentials/template-refs) 访问类型化的组件实例：
-
-```vue
-<script setup lang="ts">
-const autoFormRef = useTemplateRef('autoFormRef')
-
-function handleReset() {
-  autoFormRef.value?.reset()
-}
-
-async function handleSubmit() {
-  await autoFormRef.value?.formRef?.submit()
-}
-</script>
-
-<template>
-  <MAutoForm ref="autoFormRef" />
-</template>
-```
-
-**AutoForm 暴露的方法和属性**：
-
-| 名称 | 类型 |
-| ---- | ---- |
-| `reset()`{lang="ts-type"} | `void`{lang="ts-type"} <br> <div class="text-toned mt-1">重置表单到初始状态，包括恢复 props 中的 `state` 和应用所有默认值</div> |
-| `clear()`{lang="ts-type"} | `void`{lang="ts-type"} <br> <div class="text-toned mt-1">清空表单所有字段数据</div> |
-| `formRef`{lang="ts-type"} | `Ref<InstanceType<typeof UForm> \| null>`{lang="ts-type"} <br> <div class="text-toned mt-1">UForm 组件的模板引用，可访问底层表单的所有方法和属性</div> |
-
-::tip{icon="i-lucide-info" to="https://ui.nuxt.com/docs/components/form#expose"}
-通过 `formRef` 可以访问 UForm 的所有底层功能，包括 `submit()`、`validate()`、`clear()`、`getErrors()`、`setErrors()` 等方法，以及 `errors`、`disabled`、`dirty`、`dirtyFields`、`touchedFields`、`blurredFields` 等响应式属性。详见 Nuxt UI Form 文档。
-::
