--- a/docs/content/docs/2.auto-form/3.field/1.string.md
+++ b/docs/content/docs/2.auto-form/3.field/1.string.md
@@ -3,57 +3,136 @@ title: String
 description: String 字段类型的使用方法和配置选项
 ---
 
-## 基础用法
+## Usage
 
 ::note{to="https://zod.dev/api#strings"}
 使用 `afz.string()` 创建字符串字段：
 ::
 
+### Input
+
+::callout{color="neutral" to="https://ui.nuxt.com/docs/components/input"}
+Input 组件文档
+::
+
+基础输入框，通过 `controlProps` 配置图标、颜色等属性：
+
 ::component-example
 ---
-name: 'auto-form-field-string-example'
-prettier: false
+name: 'auto-form-field-string-input-example'
 collapse: true
 props:
   class: 'px-4'
 ---
 ::
 
-## 字符串类型
+### Textarea
+
+::callout{color="neutral" to="https://ui.nuxt.com/docs/components/textarea"}
+Textarea 组件文档
+::
+
+多行文本输入，设置 `type: 'textarea'`，支持自动调整高度：
+
+::component-example
+---
+name: 'auto-form-field-string-textarea-example'
+collapse: true
+props:
+  class: 'px-4'
+---
+::
+
+### WithClear
+
+输入内容后显示清除按钮，设置 `type: 'withClear'`:
+
+::component-example
+---
+name: 'auto-form-field-string-with-clear-example'
+collapse: true
+props:
+  class: 'px-4'
+---
+::
+
+### WithPasswordToggle
+
+密码输入框，可切换显示/隐藏，设置 `type: 'withPasswordToggle'`:
+
+::component-example
+---
+name: 'auto-form-field-string-with-password-toggle-example'
+collapse: true
+props:
+  class: 'px-4'
+---
+::
+
+### WithCopy
+
+点击复制按钮快速复制内容，设置 `type: 'withCopy'`:
+
+::component-example
+---
+name: 'auto-form-field-string-with-copy-example'
+collapse: true
+props:
+  class: 'px-4'
+---
+::
+
+### WithCharacterLimit
+
+实时显示剩余字符数，设置 `type: 'withCharacterLimit'`:
+
+::component-example
+---
+name: 'auto-form-field-string-with-character-limit-example'
+collapse: true
+props:
+  class: 'px-4'
+---
+::
+
+### PinInput
+
+::callout{color="neutral" to="https://ui.nuxt.com/docs/components/pin-input"}
+PinInput 组件文档
+::
+
+验证码或 PIN 码输入，设置 `type: 'pinInput'`:
+
+::component-example
+---
+name: 'auto-form-field-string-pin-input-example'
+collapse: true
+props:
+  class: 'px-4'
+---
+::
+
+### InputMenu
+
+::callout{color="neutral" to="https://ui.nuxt.com/docs/components/input-menu"}
+InputMenu 组件文档
+::
+
+支持输入和下拉选择，设置 `type: 'inputMenu'`:
+
+::component-example
+---
+name: 'auto-form-field-string-input-menu-example'
+collapse: true
+props:
+  class: 'px-4'
+---
+::
+
+## 字符串格式验证
 
 ::note{to="https://zod.dev/api#string-formats"}
 Zod v4 提供了专用的字符串验证方法：
-::
-
-::code-group
-```ts [Email]
-const schema = afz.object({
-  email: afz.email('请输入有效的邮箱地址')
-    .meta({
-      label: '邮箱',
-      placeholder: 'example@email.com'
-    })
-})
-```
-
-```ts [URL]
-const schema = afz.object({
-  website: afz.url('请输入有效的 URL')
-    .meta({
-      label: '网站',
-      placeholder: 'https://example.com'
-    })
-})
-```
-
-```ts [UUID]
-const schema = afz.object({
-  userId: afz.uuid('请输入有效的 UUID')
-    .meta({
-      label: '用户 ID'
-    })
-})
-```
 ::
 
 ::warning
@@ -70,34 +149,15 @@ afz.email()
 ```
 ::
 
-## 验证规则
-
-```ts
-const schema = afz.object({
-  // 长度验证
-  username: afz.string().min(3).max(20),
-  code: afz.string().length(6, '验证码必须是 6 位'),
-
-  // 正则表达式
-  phone: afz.string().regex(/^1[3-9]\d{9}$/, '请输入有效的手机号'),
-
-  // 格式转换
-  email: afz.email().trim().toLowerCase(),
-
-  // 自定义验证
-  password: afz.string()
-    .min(8)
-    .refine((val) => /[A-Z]/.test(val), '必须包含至少一个大写字母')
-    .refine((val) => /[0-9]/.test(val), '必须包含至少一个数字')
-})
-```
-
 ## Examples
+
+### 动态类型
+
+通过交互式示例探索字符串字段的各种类型和配置选项，包括：普通输入框、文本域、密码切换、清除按钮、复制功能、字符限制等增强功能，以及尺寸、颜色、行数等样式配置。
 
 ::component-example
 ---
 name: 'auto-form-field-string-type-example'
-prettier: false
 collapse: true
 props:
   class: 'px-4'
@@ -111,7 +171,7 @@ options:
       - 'withClear'
       - 'withCopy'
       - 'withCharacterLimit'
-    default: 'withCharacterLimit'
+        default: 'withCharacterLimit'
   - name: 'color',
     items:
       - 'error'
@@ -121,7 +181,7 @@ options:
       - 'info'
       - 'warning'
       - 'neutral'
-    default: 'primary'
+        default: 'primary'
   - name: 'size'
     label: 'size'
     items:
@@ -130,7 +190,7 @@ options:
       - 'md'
       - 'lg'
       - 'xl'
-    default: 'sm'
+        default: 'sm'
   - name: 'rows'
     label: 'rows'
     default: 5
@@ -140,71 +200,15 @@ options:
 ---
 ::
 
-## 最佳实践
+### 异步验证
 
-**使用专用类型代替正则验证**
+使用 `.refine()` 方法配合异步函数实现服务端验证，例如检查用户名或邮箱是否已被占用：
 
-```ts
-// ✅ 推荐
-afz.email('请输入有效的邮箱地址')
-
-// ❌ 不推荐
-afz.string().regex(/^[^\s@]+@[^\s@]+\.[^\s@]+$/, '请输入有效的邮箱地址')
-```
-
-**提供清晰的错误提示**
-
-```ts
-// ✅ 推荐
-afz.string().min(8, '密码至少需要 8 个字符')
-
-// ❌ 不推荐
-afz.string().min(8)
-```
-
-**合理组合验证规则**
-
-```ts
-afz.string()
-  .trim()           // 先去除空格
-  .toLowerCase()    // 转为小写
-  .min(3)           // 再验证长度
-  .regex(/^[a-z0-9_]+$/, '只能包含字母、数字和下划线')
-```
-
-## 常见问题
-
-### 如何实现异步验证？
-
-使用 `.refine()` 方法配合异步函数：
-
-```ts
-const schema = afz.object({
-  username: afz.string()
-    .min(3)
-    .refine(
-      async (username) => {
-        const response = await $fetch('/api/check-username', {
-          query: { username }
-        })
-        return response.available
-      },
-      '该用户名已被使用'
-    )
-})
-```
-
-### 如何设置输入框图标？
-
-使用 `controlProps` 配置：
-
-```ts
-const schema = afz.object({
-  email: afz.email().meta({
-    controlProps: {
-      leadingIcon: 'i-lucide-at-sign',
-      trailingIcon: 'i-lucide-check'
-    }
-  })
-})
-```
+::component-example
+---
+name: 'auto-form-field-string-async-validation-example'
+collapse: true
+props:
+  class: 'px-4'
+---
+::
