refactor: 优化文档配置和结构
- 移除 GitHub API 提交记录功能及相关组件
- 新增版本发布页面和配置文件
- 优化 Toaster 和主题颜色配置
- 简化文档示例配置项
- 添加表单样式全局配置说明

--- a/docs/content/docs/2.auto-form/2.api.md
+++ b/docs/content/docs/2.auto-form/2.api.md
@@ -10,11 +10,33 @@ description: AutoForm 组件的完整 API 参考文档
 ::component-example
 ---
 name: 'auto-form-basic-example'
-prettier: false
 collapse: true
 props:
   class: 'px-4'
 ---
+::
+
+
+::tip{icon="i-lucide-palette" to="https://ui.nuxt.com/docs/getting-started/theme/design-system#runtime-configuration"}
+
+通过 `app.config.ts` 可以全局配置表单的样式，例如调整字段间距:
+
+```ts [app.config.ts]
+export default defineAppConfig({
+  ui: {
+    form: {
+      base: 'space-y-4 min-w-md' // 设置表单字段间距和最小宽度
+    },
+    collapsible: {
+      slots: {
+        content: 'space-y-4' // 设置折叠面板内容的字段间距
+      }
+    }
+  }
+})
+```
+
+这样可以避免在每个 `AutoForm` 组件上重复设置 `class` 属性。
 ::
 
 ## API
