docs: 完善 Enum、Array、Object 字段 API 参数文档
- 添加 API 参数章节，明确第一个参数决定输出类型，第二个参数覆盖默认控件
- 使用 tabs 组件组织元数据配置方式（基础配置、使用注册控件、自定义组件）
- 补充对象验证模式说明（object/looseObject/strictObject）
- 修正 tabs 语法为正确的 tabs-item 格式
- 优化文档结构，移除重复内容

--- a/docs/content/docs/2.auto-form/3.field/6.array.md
+++ b/docs/content/docs/2.auto-form/3.field/6.array.md
@@ -59,3 +59,75 @@ props:
   class: 'px-4'
 ---
 ::
+
+## API 参数
+
+```ts
+afz.array(elementSchema, meta?)
+```
+
+### 第一个参数：elementSchema
+
+定义数组元素的类型，决定输出类型为 `T[]`：
+
+```ts
+// 字符串数组
+const schema1 = afz.array(afz.string())
+// 输出类型: string[]
+
+// 对象数组
+const schema2 = afz.array(afz.object({
+  name: afz.string(),
+  age: afz.number()
+}))
+// 输出类型: { name: string, age: number }[]
+```
+
+### 第二个参数：meta（可选）
+
+用于**覆盖数组元素的默认控件**和配置元数据，同时保持输出类型不变：
+
+::tabs
+  :::tabs-item{label="基础配置"}
+  不指定控件类型，数组元素使用默认映射：
+  ```ts
+  afz.array(afz.string(), {
+    label: '标签列表',
+    hint: '添加多个标签'
+  })
+  // string[] - 元素默认使用 input 控件
+  ```
+  :::
+
+  :::tabs-item{label="覆盖元素控件"}
+  通过 `type` 覆盖数组**元素的默认控件**，输出类型保持不变：
+  ```ts
+  afz.array(afz.string(), {
+    type: 'checkboxGroup',  // 覆盖 string 的默认 input 控件
+    controlProps: {
+      items: ['reading', 'gaming', 'sports']
+    }
+  })
+  // 输出类型仍为: string[]
+  // 但使用 checkboxGroup 渲染（多选）
+  ```
+
+  **关键点**：`afz.string()` 本来会被映射为 `input` 控件，通过第二个参数的 `type: 'checkboxGroup'` 覆盖了这个默认映射，将其改为多选框形式。
+  :::
+
+  :::tabs-item{label="自定义组件"}
+  直接传入自定义组件实例：
+  ```ts
+  import MyArrayControl from './MyArrayControl.vue'
+
+  afz.array(afz.string(), {
+    component: MyArrayControl,
+    controlProps: { /* ... */ }
+  })
+  ```
+  :::
+::
+
+::note
+对于对象数组（如 `afz.array(afz.object({...}))`），系统会自动使用折叠面板渲染，无需手动指定控件类型。
+::
