--- a/docs/content/docs/2.auto-form/3.field/5.enum.md
+++ b/docs/content/docs/2.auto-form/3.field/5.enum.md
@@ -60,6 +60,104 @@ props:
 ---
 ::
 
+## API 参数
+
+```ts
+afz.enum(values, meta?)
+```
+
+### 第一个参数：values
+
+决定字段的**输出类型**，支持三种形式：
+
+#### 1. 空数组 `[]`
+
+返回 `ZodString`，用于运行时动态选项：
+
+```ts
+const schema = afz.object({
+  category: afz.enum([], {
+    type: 'selectMenu',
+    controlProps: {
+      items: categories.value  // 运行时动态数据
+    }
+  })
+})
+// 输出类型: string
+```
+
+#### 2. 字符串数组
+
+返回 `ZodEnum`，提供类型安全的字面量联合类型：
+
+```ts
+const Fruits = ['apple', 'banana', 'orange'] as const
+const schema = afz.object({
+  fruit: afz.enum(Fruits)
+})
+// 输出类型: 'apple' | 'banana' | 'orange'
+```
+
+#### 3. 枚举对象
+
+返回 `ZodEnum`，支持 TypeScript 原生枚举：
+
+```ts
+enum Status {
+  Active = 'active',
+  Inactive = 'inactive'
+}
+const schema = afz.object({
+  status: afz.enum(Status)
+})
+// 输出类型: Status
+```
+
+### 第二个参数：meta（可选）
+
+用于**覆盖默认控件**和配置元数据，支持三种配置方式：
+
+::tabs
+  :::tabs-item{label="基础配置"}
+  不指定控件类型，使用默认的 `select` 控件：
+  ```ts
+  afz.enum(['a', 'b'], {
+    label: '选择选项',
+    hint: '请选择一个'
+  })
+  ```
+  :::
+
+  :::tabs-item{label="使用注册控件"}
+  通过 `type` 覆盖默认控件，同时保持输出类型不变：
+  ```ts
+  afz.enum(['a', 'b', 'c'], {
+    type: 'radioGroup',  // 覆盖默认的 select
+    controlProps: {
+      items: [
+        { label: '选项A', value: 'a' },
+        { label: '选项B', value: 'b' }
+      ]
+    }
+  })
+  // 输出类型仍为: 'a' | 'b' | 'c'
+  // 但使用 radioGroup 渲染
+  ```
+  :::
+
+  :::tabs-item{label="自定义组件"}
+  直接传入自定义组件实例：
+  ```ts
+  import MyEnumControl from './MyEnumControl.vue'
+
+  afz.enum(['a', 'b'], {
+    component: MyEnumControl,
+    controlProps: { /* ... */ }
+  })
+  ```
+  :::
+::
+
 ## 枚举值配置优先级
 
 ::tip
