--- a/docs/content/docs/2.auto-form/3.field/7.object.md
+++ b/docs/content/docs/2.auto-form/3.field/7.object.md
@@ -9,6 +9,19 @@ description: Object 字段类型的使用方法和配置选项
 使用 `afz.object()` 创建对象字段：
 ::
 
+### 通用对象
+
+通用对象类型通常与 `selectMenu` 结合使用，用于选择复杂数据结构：
+
+::component-example
+---
+name: 'auto-form-field-object-basic-example'
+collapse: true
+props:
+  class: 'px-4'
+---
+::
+
 ### 嵌套对象
 
 嵌套对象结构，支持折叠展开：
@@ -22,69 +35,173 @@ props:
 ---
 ::
 
-## 对象类型
+### 类型化对象
 
-::code-group
-```ts [基础嵌套]
-const schema = afz.object({
-  user: afz.object({
-    name: afz.string(),
-    email: afz.email()
-  }).meta({ label: '用户信息' })
-})
-```
+使用 TypeScript 接口约束对象结构，在定义 schema 时获得字段名的 IDE 提示：
 
-```ts [折叠配置]
-const schema = afz.object({
-  profile: afz.object({
-    name: afz.string(),
-    bio: afz.string()
-  }).meta({
-    label: '个人资料',
-    collapsible: { defaultOpen: true }
-  })
-})
-```
-
-```ts [可选对象]
-const schema = afz.object({
-  address: afz.object({
-    street: afz.string(),
-    city: afz.string()
-  }).optional().meta({ label: '地址信息' })
-})
-```
+::component-example
+---
+name: 'auto-form-field-object-typed-example'
+collapse: true
+props:
+  class: 'px-4'
+---
 ::
 
-## 类型化对象
+## API 参数
 
-::code-group
-```ts [Normal Object]
-interface UserInfo {
-  name: string
-  age: number
-}
+### 基础调用
 
-const schema = afz.object<UserInfo>()({
-  name: afz.string(),
-  age: afz.number()
-})
-// 允许额外字段，但会被移除
+```ts
+// 直接调用
+afz.object(shape, meta?)
+
+// 柯里化调用（类型约束）
+afz.object<TypeConstraint>()(shape, meta?)
 ```
 
-```ts [Loose Object]
-const schema = afz.looseObject<UserInfo>()({
+**两种调用方式的区别**：
+
+::tabs
+  :::tabs-item{label="直接调用"}
+  最常用的方式，直接传入字段定义：
+  ```ts
+  const schema = afz.object({
+    name: afz.string(),
+    age: afz.number()
+  })
+  ```
+  :::
+
+  :::tabs-item{label="柯里化调用"}
+  先传入类型参数，在定义 schema 时获得字段提示：
+  ```ts
+  interface UserInfo {
+    name: string
+    age: number
+    email: string
+  }
+
+  const schema = afz.object<UserInfo>()({
+    name: afz.string(),  // IDE 会提示 name | age | email
+    email: afz.email()
+  })
+  ```
+
+  ::tip
+  **使用场景**
+  基于 API 接口类型创建表单筛选器时，可以获得字段名的自动补全。
+  ::
+
+  ::note
+  类型参数 `<T>` 仅用于 IDE 提示，不影响运行时验证。
+  ::
+  :::
+::
+
+### 第一个参数：shape
+
+定义对象的字段结构，决定输出类型：
+
+```ts
+const schema = afz.object({
   name: afz.string(),
-  age: afz.number()
+  age: afz.number(),
+  email: afz.email()
 })
-// 允许额外字段，并保留
+// 输出类型: { name: string, age: number, email: string }
 ```
 
-```ts [Strict Object]
-const schema = afz.strictObject<UserInfo>()({
-  name: afz.string(),
-  age: afz.number()
-})
-// 不允许额外字段
-```
+### 第二个参数：meta（可选）
+
+用于**覆盖默认控件**和配置元数据，支持多种场景：
+
+::tabs
+  :::tabs-item{label="嵌套对象配置"}
+  为嵌套对象添加元数据（label、hint、折叠等）：
+  ```ts
+  afz.object({
+    user: afz.object({
+      name: afz.string(),
+      email: afz.email()
+    }).meta({
+      label: '用户信息',
+      collapsible: { defaultOpen: true }
+    })
+  })
+  ```
+  :::
+
+  :::tabs-item{label="通用对象控件"}
+  覆盖默认渲染方式，用于选择复杂对象：
+  ```ts
+  afz.object({
+    user: afz.object({
+      label: afz.string(),
+      value: afz.string(),
+      avatar: afz.object({ src: afz.url() })
+    }, {
+      type: 'selectMenu',  // 覆盖默认的嵌套表单
+      controlProps: {
+        items: users.value,
+        placeholder: '请选择用户'
+      }
+    })
+  })
+  // 输出类型: { label: string, value: string, avatar: { src: string } }
+  // 渲染方式: 使用 selectMenu 选择器
+  ```
+  :::
+
+  :::tabs-item{label="自定义组件"}
+  直接传入自定义组件实例：
+  ```ts
+  import MyObjectControl from './MyObjectControl.vue'
+
+  afz.object({}, {
+    component: MyObjectControl,
+    controlProps: { /* ... */ }
+  })
+  ```
+  :::
+::
+
+## 对象验证模式
+
+三种对象工厂对应不同的额外字段处理策略：
+
+::tabs
+  :::tabs-item{label="object（默认）"}
+  移除未定义的额外字段：
+  ```ts
+  const schema = afz.object({ name: afz.string() })
+
+  schema.parse({ name: '张三', extra: 'removed' })
+  // 结果: { name: '张三' }
+  ```
+  :::
+
+  :::tabs-item{label="looseObject（宽松）"}
+  允许并保留额外字段：
+  ```ts
+  const schema = afz.looseObject({ name: afz.string() })
+
+  schema.parse({ name: '张三', extra: 'kept' })
+  // 结果: { name: '张三', extra: 'kept' }
+  ```
+  :::
+
+  :::tabs-item{label="strictObject（严格）"}
+  额外字段会抛出验证错误：
+  ```ts
+  const schema = afz.strictObject({ name: afz.string() })
+
+  schema.parse({ name: '张三', extra: 'error' })
+  // 错误: Unrecognized key(s) in object: 'extra'
+  ```
+  :::
+::
+
+::tip
+可以在[类型化对象示例](#类型化对象)中交互式体验三种验证模式的区别。
 ::
