docs: 优化字段类型文档排版结构
- 更新文件上传示例的默认布局为列表模式
- 统一 Enum、Array、Object 字段文档的参数说明格式
- 改进代码示例的视觉呈现,使用带边框容器包裹 tabs 组件
- 调整提示信息的位置和样式,提升文档可读性

--- a/docs/content/docs/2.auto-form/3.field/5.enum.md
+++ b/docs/content/docs/2.auto-form/3.field/5.enum.md
@@ -66,9 +66,11 @@ props:
 afz.enum(values, meta?)
 ```
 
-### 第一个参数：values
+### Values
 
+::note
 决定字段的**输出类型**，支持三种形式：
+::
 
 #### 1. 空数组 `[]`
 
@@ -113,50 +115,56 @@ const schema = afz.object({
 // 输出类型: Status
 ```
 
-### 第二个参数：meta（可选）
+### Meta
 
+::note
 用于**覆盖默认控件**和配置元数据，支持三种配置方式：
-
-::tabs
-  :::tabs-item{label="基础配置"}
-  不指定控件类型，使用默认的 `select` 控件：
-  ```ts
-  afz.enum(['a', 'b'], {
-    label: '选择选项',
-    hint: '请选择一个'
-  })
-  ```
-  :::
-
-  :::tabs-item{label="使用注册控件"}
-  通过 `type` 覆盖默认控件，同时保持输出类型不变：
-  ```ts
-  afz.enum(['a', 'b', 'c'], {
-    type: 'radioGroup',  // 覆盖默认的 select
-    controlProps: {
-      items: [
-        { label: '选项A', value: 'a' },
-        { label: '选项B', value: 'b' }
-      ]
-    }
-  })
-  // 输出类型仍为: 'a' | 'b' | 'c'
-  // 但使用 radioGroup 渲染
-  ```
-  :::
-
-  :::tabs-item{label="自定义组件"}
-  直接传入自定义组件实例：
-  ```ts
-  import MyEnumControl from './MyEnumControl.vue'
-
-  afz.enum(['a', 'b'], {
-    component: MyEnumControl,
-    controlProps: { /* ... */ }
-  })
-  ```
-  :::
 ::
+
+:::div{class="rounded-md border border-accented px-4"}
+
+  ::tabs
+    :::tabs-item{label="基础配置"}
+    不指定控件类型，使用默认的 `select` 控件：
+    ```ts
+    afz.enum(['a', 'b'], {
+      label: '选择选项',
+      hint: '请选择一个'
+    })
+    ```
+    :::
+
+    :::tabs-item{label="使用注册控件"}
+    通过 `type` 覆盖默认控件，同时保持输出类型不变：
+    ```ts
+    afz.enum(['a', 'b', 'c'], {
+      type: 'radioGroup',  // 覆盖默认的 select
+      controlProps: {
+        items: [
+          { label: '选项A', value: 'a' },
+          { label: '选项B', value: 'b' }
+        ]
+      }
+    })
+    // 输出类型仍为: 'a' | 'b' | 'c'
+    // 但使用 radioGroup 渲染
+    ```
+    :::
+
+    :::tabs-item{label="自定义组件"}
+    直接传入自定义组件实例：
+    ```ts
+    import MyEnumControl from './MyEnumControl.vue'
+
+    afz.enum(['a', 'b'], {
+      component: MyEnumControl,
+      controlProps: { /* ... */ }
+    })
+    ```
+    :::
+  ::
+
+:::
 
 ## 枚举值配置优先级
 
