docs: 完善 String 和 Number 字段类型文档
- 添加 ColorChooser 组件使用说明和示例
- 添加 StarRating 组件使用说明和示例
- 修复 String 字段文档中 YAML 缩进格式错误
- 优化 Number 字段文档结构,移除冗余代码示例

--- a/docs/content/docs/2.auto-form/3.field/1.string.md
+++ b/docs/content/docs/2.auto-form/3.field/1.string.md
@@ -129,6 +129,19 @@ props:
 ---
 ::
 
+### ColorChooser
+
+颜色选择器,支持可视化颜色选择和格式化,设置 `type: 'colorChooser'`:
+
+::component-example
+---
+name: 'auto-form-field-string-color-chooser-example'
+collapse: true
+props:
+  class: 'px-4'
+---
+::
+
 ## 字符串格式验证
 
 ::note{to="https://zod.dev/api#string-formats"}
@@ -171,7 +184,7 @@ options:
       - 'withClear'
       - 'withCopy'
       - 'withCharacterLimit'
-        default: 'withCharacterLimit'
+    default: 'withCharacterLimit'
   - name: 'color',
     items:
       - 'error'
@@ -181,7 +194,7 @@ options:
       - 'info'
       - 'warning'
       - 'neutral'
-        default: 'primary'
+    default: 'primary'
   - name: 'size'
     label: 'size'
     items:
@@ -190,7 +203,7 @@ options:
       - 'md'
       - 'lg'
       - 'xl'
-        default: 'sm'
+    default: 'sm'
   - name: 'rows'
     label: 'rows'
     default: 5
