--- a/docs/content/docs/2.auto-form/3.field/2.number.md
+++ b/docs/content/docs/2.auto-form/3.field/2.number.md
@@ -43,40 +43,15 @@ props:
 ---
 ::
 
-## 数字类型
+### StarRating
 
-::code-group
-```ts [整数]
-const schema = afz.object({
-  count: afz.number()
-    .int('请输入整数')
-    .meta({ label: '数量' })
-})
-```
+星级评分组件,设置 `type: 'starRating'`,支持半星评分和自定义最大星数:
 
-```ts [正整数]
-const schema = afz.object({
-  quantity: afz.number()
-    .int()
-    .positive('必须是正整数')
-    .meta({ label: '数量' })
-})
-```
-
-```ts [非负数]
-const schema = afz.object({
-  price: afz.number()
-    .nonnegative('价格不能为负数')
-    .meta({ label: '价格' })
-})
-```
-
-```ts [范围限制]
-const schema = afz.object({
-  score: afz.number()
-    .min(0, '不能小于 0')
-    .max(100, '不能大于 100')
-    .meta({ label: '分数' })
-})
-```
+::component-example
+---
+name: 'auto-form-field-number-star-rating-example'
+collapse: true
+props:
+  class: 'px-4'
+---
 ::
