docs(auto-form): 重构文档结构,优化内容组织
- 删除旧的字段类型详细文档 (3.field/1-8.md)
- 删除旧的核心概念和布局文档 (1.core.md, 4.layout.md)
- 新增文档概览页面 (1.index.md)
- 新增配置说明文档 (3.configuration.md)
- 新增字段类型文档目录 (4.field/)
- 新增插槽系统文档 (5.slots/)
- 新增自定义与扩展文档 (6.customization/)
- 新增 composables 文档 (4.composables/)
- 优化 API 参考文档,补充类型定义和使用示例

--- a/docs/content/docs/3.auto-form/2.api.md
+++ b/docs/content/docs/3.auto-form/2.api.md
@@ -1,83 +1,52 @@
 ---
-title: API
+title: API 参考
 description: AutoForm 组件的完整 API 参考文档
 ---
 
-## 基础用法
-
-展示了创建一个最基本表单所需的代码。
-
-::component-example
----
-name: 'auto-form-basic-example'
-collapse: true
-props:
-  class: 'px-4'
----
-::
-
-
-::tip{icon="i-lucide-palette" to="https://ui.nuxt.com/docs/getting-started/theme/design-system#runtime-configuration"}
-
-通过 `app.config.ts` 可以全局配置表单的样式，例如调整字段间距:
-
-```ts [app.config.ts]
-export default defineAppConfig({
-  ui: {
-    form: {
-      base: 'space-y-4 min-w-md' // 设置表单字段间距和最小宽度
-    },
-    collapsible: {
-      slots: {
-        content: 'space-y-4' // 设置折叠面板内容的字段间距
-      }
-    }
-  }
-})
-```
-
-这样可以避免在每个 `AutoForm` 组件上重复设置 `class` 属性。
-::
-
-## API
-
-### Props
+## Props
 
 :component-props{slug=MAutoForm}
 
-### Slots
+## Slots
 
 :component-slots{slug=MAutoForm}
+
+### 字段级插槽
 
 ::note{icon="i-lucide-sparkles"}
 除了组件级别的插槽外，AutoForm 还支持**字段级别的动态插槽**，并提供完整的 TypeScript 类型推断和编辑器自动补全。
 ::
 
-**字段插槽命名规则**：
+**命名规则**：
 
 | 插槽模式 | 示例 | 说明 |
 |---------|------|------|
-| `field-{slotType}`{lang="ts-type"} | `field-label`{lang="ts-type"}, `field-default`{lang="ts-type"} | 通用插槽，适用于所有字段 |
-| `field-{slotType}:{fieldKey}`{lang="ts-type"} | `field-label:username`{lang="ts-type"}, `field-default:email`{lang="ts-type"} | 特定字段插槽，享受**完整类型推导** |
-| `field-{position}:{fieldKey}`{lang="ts-type"} | `field-before:profile`{lang="ts-type"}, `field-content:tasks`{lang="ts-type"} | 嵌套字段布局插槽 |
+| `field-{slotType}` | `field-label`, `field-default` | 通用插槽，适用于所有字段 |
+| `field-{slotType}:{fieldKey}` | `field-label:username`, `field-default:email` | 特定字段插槽，享受**完整类型推导** |
+| `field-{position}:{fieldKey}` | `field-before:profile`, `field-content:tasks` | 嵌套字段布局插槽 |
 
 **可用的插槽类型**（`slotType`）：
-- `label`{lang="ts-type"} - 自定义字段标签
-- `hint`{lang="ts-type"} - 自定义提示信息
-- `description`{lang="ts-type"} - 自定义字段描述
-- `help`{lang="ts-type"} - 自定义帮助文本
-- `error`{lang="ts-type"} - 自定义错误信息显示
-- `default`{lang="ts-type"} - 自定义字段控件
 
-::tip{icon="i-lucide-sparkles"}
+| Slot Type | Description |
+|-----------|-------------|
+| `label` | 自定义字段标签 |
+| `hint` | 自定义提示信息 |
+| `description` | 自定义字段描述 |
+| `help` | 自定义帮助文本 |
+| `error` | 自定义错误信息显示 |
+| `default` | 自定义字段控件 |
+
+::tip{icon="i-lucide-sparkles" to="/docs/auto-form/slots"}
 **类型提示优势**：当你在模板中使用字段插槽时（如 `#field-default:username`），编辑器会自动提示插槽参数的类型，包括 `state`、`path`、`value`、`setValue` 等上下文属性，并根据 Schema 精确推断字段值类型。
+
+查看插槽系统文档了解详细用法。
 ::
 
-### Emits
+## Emits
 
 :component-emits{slug=MAutoForm}
 
-### Expose
+## Expose
 
 使用 [`useTemplateRef`](https://cn.vuejs.org/guide/essentials/template-refs) 访问类型化的组件实例：
 
@@ -101,12 +70,97 @@ async function handleSubmit() {
 
 **AutoForm 暴露的方法和属性**：
 
-| 名称 | 类型 |
-| ---- | ---- |
-| `reset()`{lang="ts-type"} | `void`{lang="ts-type"} <br> <div class="text-toned mt-1">重置表单到初始状态，包括恢复 props 中的 `state` 和应用所有默认值</div> |
-| `clear()`{lang="ts-type"} | `void`{lang="ts-type"} <br> <div class="text-toned mt-1">清空表单所有字段数据</div> |
-| `formRef`{lang="ts-type"} | `Ref<InstanceType<typeof UForm> \| null>`{lang="ts-type"} <br> <div class="text-toned mt-1">UForm 组件的模板引用，可访问底层表单的所有方法和属性</div> |
+| 名称 | 类型 | 描述 |
+| ---- | ---- | ---- |
+| `reset()` | `void`{lang="ts-type"} | 重置表单到初始状态，包括恢复 props 中的 `state` 和应用所有默认值 |
+| `clear()` | `void`{lang="ts-type"} | 清空表单所有字段数据 |
+| `formRef` | `Ref<InstanceType<typeof UForm> \| null>`{lang="ts-type"} | UForm 组件的模板引用，可访问底层表单的所有方法和属性 |
 
 ::tip{to="https://ui.nuxt.com/docs/components/form#expose"}
 通过 `formRef` 可以访问 UForm 的所有底层功能，包括 `submit()`、`validate()`、`clear()`、`getErrors()`、`setErrors()` 等方法，以及 `errors`、`disabled`、`dirty`、`dirtyFields`、`touchedFields`、`blurredFields` 等响应式属性。详见 Nuxt UI Form 文档。
 ::
+
+## 类型定义
+
+### AutoFormFieldContext
+
+字段上下文类型，在插槽和响应式函数中可用：
+
+```ts
+interface AutoFormFieldContext<S = any, P extends string = string> {
+  /** 表单数据 */
+  readonly state: S
+  /** 字段路径 */
+  readonly path: P
+  /** 字段值（可能为 undefined） */
+  readonly value: FieldValueType<S, P>
+  /** 设置字段值的回调函数 */
+  setValue: {
+    (value: FieldValueType<S, P>): void
+    <K extends RelativePath<NonUndefinedFieldValue<S, P>>>(
+      relativePath: K extends never ? string : K,
+      value: any
+    ): void
+    (relativePath: string, value: any): void
+  }
+  /** 字段错误列表 */
+  readonly errors: unknown[]
+  /** 表单提交加载状态 */
+  readonly loading: boolean
+  /** 字段折叠状态 */
+  readonly open?: boolean
+  /** 数组元素下标 */
+  readonly count?: number
+}
+```
+
+### AutoFormLayoutConfig
+
+布局配置类型：
+
+```ts
+interface AutoFormLayoutConfig<C extends IsComponent = IsComponent> {
+  /** 布局容器组件 */
+  component?: C
+  /** 布局组件属性（根据组件类型自动推断，支持响应式） */
+  props?: ReactiveValue<ComponentProps<C>, AutoFormFieldContext>
+  /** 布局组件 CSS 类名（支持响应式） */
+  class?: ReactiveValue<ClassNameValue, AutoFormFieldContext>
+  /** 布局组件插槽（根据组件类型自动推断，支持响应式） */
+  slots?: ReactiveValue<Partial<ComponentSlots<C>>, AutoFormFieldContext>
+  /** 布局内的字段定义（类似 z.object() 的 shape） */
+  fields: Record<string, z.ZodType>
+  /** 所有字段统一渲染到的插槽名称（支持响应式） */
+  fieldSlot?: ReactiveValue<keyof ComponentSlots<C> & string, AutoFormFieldContext>
+  /** 字段到插槽的映射关系（支持响应式，优先级高于 fieldSlot） */
+  fieldSlots?: ReactiveValue<Partial<Record<string, keyof ComponentSlots<C> & string>>, AutoFormFieldContext>
+}
+```
+
+### AutoFormNestedCollapsible
+
+嵌套字段折叠配置类型：
+
+```ts
+interface AutoFormNestedCollapsible {
+  /** 是否启用折叠功能（默认：true） */
+  enabled?: boolean
+  /** 默认打开状态 */
+  defaultOpen?: boolean
+  /** 控制打开/关闭 */
+  open?: boolean
+  /** 禁用折叠功能 */
+  disabled?: boolean
+  /** 隐藏时卸载内容 */
+  unmountOnHide?: boolean
+  /** 渲染的元素或组件类型（默认：'div'） */
+  as?: unknown
+  /** CSS 类名 */
+  class?: unknown
+  /** UI 配置 */
+  ui?: {
+    root?: ClassNameValue
+    content?: ClassNameValue
+  }
+}
+```
