--- a/docs/content/docs/3.auto-form/4.field/1.string.md
+++ b/docs/content/docs/3.auto-form/4.field/1.string.md
@@ -3,7 +3,7 @@ title: String
 description: String 字段类型的使用方法和配置选项
 ---
 
-## Usage
+## 基础用法
 
 ::note{to="https://zod.dev/api#strings"}
 使用 `afz.string()` 创建字符串字段：
@@ -21,8 +21,6 @@ Input 组件文档
 ---
 name: 'auto-form-field-string-input-example'
 collapse: true
-props:
-  class: 'px-4'
 ---
 ::
 
@@ -38,60 +36,50 @@ Textarea 组件文档
 ---
 name: 'auto-form-field-string-textarea-example'
 collapse: true
-props:
-  class: 'px-4'
 ---
 ::
 
 ### WithClear
 
-输入内容后显示清除按钮，设置 `type: 'withClear'`:
+输入内容后显示清除按钮，设置 [`type: 'withClear'`](/docs/components/with-clear):
 
 ::component-example
 ---
 name: 'auto-form-field-string-with-clear-example'
 collapse: true
-props:
-  class: 'px-4'
 ---
 ::
 
 ### WithPasswordToggle
 
-密码输入框，可切换显示/隐藏，设置 `type: 'withPasswordToggle'`:
+密码输入框，可切换显示/隐藏，设置 [`type: 'withPasswordToggle'`](/docs/components/with-password-toggle):
 
 ::component-example
 ---
 name: 'auto-form-field-string-with-password-toggle-example'
 collapse: true
-props:
-  class: 'px-4'
 ---
 ::
 
 ### WithCopy
 
-点击复制按钮快速复制内容，设置 `type: 'withCopy'`:
+点击复制按钮快速复制内容，设置 [`type: 'withCopy'`](/docs/components/with-copy):
 
 ::component-example
 ---
 name: 'auto-form-field-string-with-copy-example'
 collapse: true
-props:
-  class: 'px-4'
 ---
 ::
 
 ### WithCharacterLimit
 
-实时显示剩余字符数，设置 `type: 'withCharacterLimit'`:
+实时显示剩余字符数，设置 [`type: 'withCharacterLimit'`](/docs/components/with-character-limit):
 
 ::component-example
 ---
 name: 'auto-form-field-string-with-character-limit-example'
 collapse: true
-props:
-  class: 'px-4'
 ---
 ::
 
@@ -107,8 +95,6 @@ PinInput 组件文档
 ---
 name: 'auto-form-field-string-pin-input-example'
 collapse: true
-props:
-  class: 'px-4'
 ---
 ::
 
@@ -124,21 +110,17 @@ InputMenu 组件文档
 ---
 name: 'auto-form-field-string-input-menu-example'
 collapse: true
-props:
-  class: 'px-4'
 ---
 ::
 
 ### ColorChooser
 
-颜色选择器,支持可视化颜色选择和格式化,设置 `type: 'colorChooser'`:
+颜色选择器，支持可视化颜色选择和格式化，设置 [`type: 'colorChooser'`](/docs/components/color-chooser)：
 
 ::component-example
 ---
 name: 'auto-form-field-string-color-chooser-example'
 collapse: true
-props:
-  class: 'px-4'
 ---
 ::
 
@@ -162,7 +144,7 @@ afz.email()
 ```
 ::
 
-## Examples
+## 示例
 
 ### 动态类型
 
@@ -221,7 +203,5 @@ options:
 ---
 name: 'auto-form-field-string-async-validation-example'
 collapse: true
-props:
-  class: 'px-4'
 ---
 ::
