--- a/docs/content/docs/3.auto-form/4.field/2.number.md
+++ b/docs/content/docs/3.auto-form/4.field/2.number.md
@@ -3,7 +3,7 @@ title: Number
 description: Number 字段类型的使用方法和配置选项
 ---
 
-## Usage
+## 基础用法
 
 ::note{to="https://zod.dev/api#numbers"}
 使用 `afz.number()` 创建数字字段：
@@ -21,8 +21,6 @@ InputNumber 组件文档
 ---
 name: 'auto-form-field-number-input-example'
 collapse: true
-props:
-  class: 'px-4'
 ---
 ::
 
@@ -38,20 +36,16 @@ Slider 组件文档
 ---
 name: 'auto-form-field-number-slider-example'
 collapse: true
-props:
-  class: 'px-4'
 ---
 ::
 
 ### StarRating
 
-星级评分组件,设置 `type: 'starRating'`,支持半星评分和自定义最大星数:
+星级评分组件，设置 [`type: 'starRating'`](/docs/components/star-rating)，支持半星评分和自定义最大星数：
 
 ::component-example
 ---
 name: 'auto-form-field-number-star-rating-example'
 collapse: true
-props:
-  class: 'px-4'
 ---
 ::
