--- a/docs/content/docs/3.auto-form/4.field/3.boolean.md
+++ b/docs/content/docs/3.auto-form/4.field/3.boolean.md
@@ -3,7 +3,7 @@ title: Boolean
 description: Boolean 字段类型的使用方法和配置选项
 ---
 
-## Usage
+## 基础用法
 
 ::note{to="https://zod.dev/api#booleans"}
 使用 `afz.boolean()` 创建布尔值字段：
@@ -21,8 +21,6 @@ Checkbox 组件文档
 ---
 name: 'auto-form-field-boolean-checkbox-example'
 collapse: true
-props:
-  class: 'px-4'
 ---
 ::
 
@@ -38,7 +36,5 @@ Switch 组件文档
 ---
 name: 'auto-form-field-boolean-switch-example'
 collapse: true
-props:
-  class: 'px-4'
 ---
 ::
