--- a/docs/content/docs/3.auto-form/4.field/5.enum.md
+++ b/docs/content/docs/3.auto-form/4.field/5.enum.md
@@ -3,7 +3,7 @@ title: Enum
 description: Enum 字段类型的使用方法和配置选项
 ---
 
-## Usage
+## 基础用法
 
 ::note{to="https://zod.dev/api#enums"}
 使用 `afz.enum()` 创建枚举字段：
@@ -21,8 +21,6 @@ Select 组件文档
 ---
 name: 'auto-form-field-enum-select-example'
 collapse: true
-props:
-  class: 'px-4'
 ---
 ::
 
@@ -38,8 +36,6 @@ SelectMenu 组件文档
 ---
 name: 'auto-form-field-enum-select-menu-example'
 collapse: true
-props:
-  class: 'px-4'
 ---
 ::
 
@@ -55,12 +51,10 @@ RadioGroup 组件文档
 ---
 name: 'auto-form-field-enum-radio-group-example'
 collapse: true
-props:
-  class: 'px-4'
 ---
 ::
 
-## API 参数
+## API
 
 ```ts
 afz.enum(values, meta?)
@@ -85,7 +79,7 @@ const schema = afz.object({
     }
   })
 })
-// 输出类型: string
+// 输出类型：string
 ```
 
 #### 2. 字符串数组
@@ -97,7 +91,7 @@ const Fruits = ['apple', 'banana', 'orange'] as const
 const schema = afz.object({
   fruit: afz.enum(Fruits)
 })
-// 输出类型: 'apple' | 'banana' | 'orange'
+// 输出类型：'apple' | 'banana' | 'orange'
 ```
 
 #### 3. 枚举对象
@@ -112,7 +106,7 @@ enum Status {
 const schema = afz.object({
   status: afz.enum(Status)
 })
-// 输出类型: Status
+// 输出类型：Status
 ```
 
 ### Meta
@@ -146,7 +140,7 @@ const schema = afz.object({
         ]
       }
     })
-    // 输出类型仍为: 'a' | 'b' | 'c'
+    // 输出类型仍为：'a' | 'b' | 'c'
     // 但使用 radioGroup 渲染
     ```
     :::
@@ -186,7 +180,7 @@ const schema = afz.object({
     type: 'selectMenu',
     controlProps: {
       placeholder: '选择水果'
-      // 系统自动转换: items: ['apple', 'banana', 'orange']
+      // 系统自动转换：items: ['apple', 'banana', 'orange']
     }
   })
 })
@@ -228,8 +222,8 @@ const schema = afz.object({
     }
   })
 })
-// 输出类型: 'male' | 'female' | 'other'
-// 显示内容: 男 / 女 / 其他
+// 输出类型：'male' | 'female' | 'other'
+// 显示内容：男 / 女 / 其他
 ```
 
 ::note
