--- a/docs/content/docs/3.auto-form/4.field/7.object.md
+++ b/docs/content/docs/3.auto-form/4.field/7.object.md
@@ -3,7 +3,7 @@ title: Object
 description: Object 字段类型的使用方法和配置选项
 ---
 
-## Usage
+## 基础用法
 
 ::note{to="https://zod.dev/api#objects"}
 使用 `afz.object()` 创建对象字段：
@@ -50,7 +50,7 @@ props:
 ---
 ::
 
-## API 参数
+## API
 
 ### 基础调用
 
@@ -115,7 +115,7 @@ const schema = afz.object({
   age: afz.number(),
   email: afz.email()
 })
-// 输出类型: { name: string, age: number, email: string }
+// 输出类型：{ name: string, age: number, email: string }
 ```
 
 ### Meta
@@ -158,8 +158,8 @@ const schema = afz.object({
         }
       })
     })
-    // 输出类型: { label: string, value: string, avatar: { src: string } }
-    // 渲染方式: 使用 selectMenu 选择器
+    // 输出类型：{ label: string, value: string, avatar: { src: string } }
+    // 渲染方式：使用 selectMenu 选择器
     ```
     :::
 
@@ -191,7 +191,7 @@ const schema = afz.object({
     const schema = afz.object({ name: afz.string() })
 
     schema.parse({ name: '张三', extra: 'removed' })
-    // 结果: { name: '张三' }
+    // 结果：{ name: '张三' }
     ```
     :::
 
@@ -201,7 +201,7 @@ const schema = afz.object({
     const schema = afz.looseObject({ name: afz.string() })
 
     schema.parse({ name: '张三', extra: 'kept' })
-    // 结果: { name: '张三', extra: 'kept' }
+    // 结果：{ name: '张三', extra: 'kept' }
     ```
     :::
 
@@ -211,7 +211,7 @@ const schema = afz.object({
     const schema = afz.strictObject({ name: afz.string() })
 
     schema.parse({ name: '张三', extra: 'error' })
-    // 错误: Unrecognized key(s) in object: 'extra'
+    // 错误：Unrecognized key(s) in object: 'extra'
     ```
     :::
   ::
