--- a/docs/content/docs/3.auto-form/4.field/8.file.md
+++ b/docs/content/docs/3.auto-form/4.field/8.file.md
@@ -3,7 +3,7 @@ title: File
 description: File 字段类型的使用方法和配置选项
 ---
 
-## Usage
+## 基础用法
 
 使用 `afz.file()` 创建文件上传字段：
 
@@ -15,8 +15,6 @@ description: File 字段类型的使用方法和配置选项
 ---
 name: 'auto-form-field-file-single-example'
 collapse: true
-props:
-  class: 'px-4'
 ---
 ::
 
@@ -28,7 +26,5 @@ props:
 ---
 name: 'auto-form-field-file-multiple-example'
 collapse: true
-props:
-  class: 'px-4'
 ---
 ::
