--- a/docs/content/docs/3.auto-form/4.field/4.date.md
+++ b/docs/content/docs/3.auto-form/4.field/4.date.md
@@ -3,10 +3,11 @@ title: Date
 description: Date 字段类型的使用方法和配置选项
 ---
 
-<!-- TODO -->
-<!-- 补充 useDateFormatter 之后添加链接-->
+::tip{to="/composables/use-date-formatter"}
+useDateFormatter 文档：基于 @internationalized/date 的日期格式化和处理工具。
+::
 
-## Usage
+## 基础用法
 
 使用 `afz.date()` 创建日期字段，基于 [`@internationalized/date`](https://react-spectrum.adobe.com/internationalized/date/index.html) 提供强大的日期处理能力：
 
@@ -22,8 +23,6 @@ Calendar 组件文档
 ---
 name: 'auto-form-field-date-picker-example'
 collapse: true
-props:
-  class: 'px-4'
 ---
 ::
 
@@ -35,7 +34,5 @@ props:
 ---
 name: 'auto-form-field-date-range-example'
 collapse: true
-props:
-  class: 'px-4'
 ---
 ::
