--- a/docs/content/docs/3.auto-form/4.field/6.array.md
+++ b/docs/content/docs/3.auto-form/4.field/6.array.md
@@ -3,7 +3,7 @@ title: Array
 description: Array 字段类型的使用方法和配置选项
 ---
 
-## Usage
+## 基础用法
 
 ::note{to="https://zod.dev/api#arrays"}
 使用 `afz.array()` 创建数组字段：
@@ -21,8 +21,6 @@ InputTags 组件文档
 ---
 name: 'auto-form-field-array-input-tags-example'
 collapse: true
-props:
-  class: 'px-4'
 ---
 ::
 
@@ -38,8 +36,6 @@ CheckboxGroup 组件文档
 ---
 name: 'auto-form-field-array-checkbox-group-example'
 collapse: true
-props:
-  class: 'px-4'
 ---
 ::
 
@@ -60,7 +56,20 @@ props:
 ---
 ::
 
-## API 参数
+### 动态数组
+
+创建和管理动态添加或删除元素的表单数组。
+
+::component-example
+---
+name: 'auto-form-field-array-dynamic-example'
+collapse: true
+props:
+  class: 'px-4'
+---
+::
+
+## API
 
 ```ts
 afz.array(elementSchema, meta?)
@@ -73,14 +82,14 @@ afz.array(elementSchema, meta?)
 ```ts
 // 字符串数组
 const schema1 = afz.array(afz.string())
-// 输出类型: string[]
+// 输出类型：string[]
 
 // 对象数组
 const schema2 = afz.array(afz.object({
   name: afz.string(),
   age: afz.number()
 }))
-// 输出类型: { name: string, age: number }[]
+// 输出类型：{ name: string, age: number }[]
 ```
 
 ### Meta
@@ -116,7 +125,7 @@ const schema2 = afz.array(afz.object({
         items: ['reading', 'gaming', 'sports']
       }
     })
-    // 输出类型仍为: string[]
+    // 输出类型仍为：string[]
     // 但使用 checkboxGroup 渲染（多选）
     ```
 
