docs: 重构文档体系,优化内容组织和架构说明
- 重构 CLAUDE.md,补充详细的架构设计和开发约定
- 更新快速开始文档,强化模块化设计理念的传达
- 优化安装指南,添加依赖兼容性说明
- 调整文档导航结构,增加版本发布入口
- 优化首页示例,从工具函数演示改为核心功能展示(AutoForm/DatePicker/输入增强)
- 更新 AutoForm 手风琴布局示例图标

--- a/docs/content/docs/1.getting-started/2.installation.md
+++ b/docs/content/docs/1.getting-started/2.installation.md
@@ -1,16 +1,14 @@
 ---
 title: 安装
-description: 在 Nuxt 项目中安装和配置 Movk Nuxt 模块
+description: 在 Nuxt 4 项目中安装和配置 Movk Nuxt 模块
 ---
 
 ## 环境要求
 
-在开始之前，请确保你的开发环境满足以下要求：
-
 ::callout{color="info"}
-- **Node.js** - `18.x` 或更高版本
-- **Nuxt** - `4.2.0` 或更高版本
-- **包管理器** - pnpm、npm 或 yarn
+- **Node.js** - `^18.x || ^20.x || ^22.x`
+- **Nuxt** - `^4.2.0`（需要 Nuxt 4）
+- **包管理器** - pnpm / npm / yarn
 ::
 
 ## 安装依赖
@@ -29,13 +27,21 @@ yarn add @movk/nuxt
 ```
 ::
 
-::tip
-Movk Nuxt 依赖 **@nuxt/ui** 提供基础组件。
+::note
+Movk Nuxt 依赖 **@nuxt/ui** 提供基础组件，安装时会自动安装相关依赖。
 ::
 
 ## 模块配置
 
-Movk Nuxt 支持以下配置选项：
+在 `nuxt.config.ts` 中注册模块：
+
+```ts [nuxt.config.ts]
+export default defineNuxtConfig({
+  modules: ['@movk/nuxt']
+})
+```
+
+### 可选配置
 
 ```ts [nuxt.config.ts]
 export default defineNuxtConfig({
@@ -48,33 +54,26 @@ export default defineNuxtConfig({
 })
 ```
 
-### 配置选项
-
 | 选项 | 类型 | 默认值 | 说明 |
 |------|------|--------|------|
-| `prefix`{lang="ts-type"} | `string` | `'M'` | 全局组件前缀，如 `MAutoForm`、`MAutoTable` 等 |
+| `prefix`{lang="ts-type"} | `string` | `'M'` | 全局组件前缀，如 `MAutoForm`、`MDatePicker` 等 |
 
 ## TypeScript 支持
 
-Movk Nuxt 提供完整的 TypeScript 类型定义。安装后，类型会自动生成并注入到你的项目中。
-
-::tip
-你可以在 IDE 中享受完整的类型提示和自动补全：
-::
+Movk Nuxt 提供完整的 TypeScript 类型定义，安装后自动注入到项目中。
 
 ```ts
 import type { z } from 'zod/v4'
 
-// 类型会自动推断
 const { afz } = useAutoForm()
 
 const schema = afz.object({
-  email: afz.email(), // ✅ 自动提示所有方法
-  age: afz.number()   // ✅ 类型安全
+  email: afz.email(), // ✅ 完整的类型提示
+  age: afz.number()
 })
 
 // 从 schema 推断数据类型
-type Schema = z.output<typeof schema>
+type FormData = z.output<typeof schema>
 ```
 
 ## Zod v4 集成
