--- a/docs/content/docs/1.getting-started/1.index.md
+++ b/docs/content/docs/1.getting-started/1.index.md
@@ -1,65 +1,88 @@
 ---
 title: 快速开始
-description: Movk Nuxt 是一个为 Nuxt 应用提供开箱即用组件和工具函数的模块集合
+description: Movk Nuxt 是一个模块化的 Nuxt 4 工程套件，提供自动化系统、独立组件和通用工具函数
 ---
 
 ## 介绍
 
-Movk Nuxt 是一个专为 Nuxt 4 设计的功能增强模块，提供一系列开箱即用的组件和工具函数，帮助你快速构建现代 Web 应用。
+Movk Nuxt 是一个为 Nuxt 4 设计的**模块化工程套件** (Modular Engineering Suite)。它采用**分层架构**设计，旨在通过高度抽象的自动化系统（如 AutoForm）解决重复性工作，同时提供高质量的独立组件（如 DatePicker）和组合式函数以满足定制化需求。
 
 构建在 [Nuxt UI](https://ui.nuxt.com) 之上，Movk Nuxt 遵循相同的设计原则：美观、可访问、开发者友好。
 
 ::callout{icon="i-lucide-rocket" color="primary"}
-当前版本聚焦于 **AutoForm** - 基于 Zod Schema 的自动表单生成系统。后续将扩展更多实用功能，包括 **AutoTable**、**UseApi** 等常用 composables。
+遵循**渐进式采用**原则——你可以只用它的日期处理工具，也可以只用它的 UI 组件，或者使用全自动化的 **AutoForm**/**AutoTable** 系统。
 ::
 
 ## 核心特性
 
 ::card-group
-  :::card{icon="i-lucide-zap" title="零模板代码"}
-  通过 Zod Schema 定义数据结构，自动生成完整表单界面，无需编写重复的表单模板代码。
+  :::card{icon="i-lucide-blocks" title="模块化设计"}
+  按需使用。你可以只使用 UI 组件、日期工具函数，或者启用全套自动化系统。
   :::
 
-  :::card{icon="i-lucide-shield-check" title="类型安全"}
-  完整的 TypeScript 类型推断，从 Schema 到表单数据全程类型安全。
+  :::card{icon="i-lucide-zap" title="自动化系统"}
+  **AutoForm** 通过 Schema 定义自动生成完整表单界面。**AutoTable**（规划中）将复用相同的 Schema 定义。
   :::
 
-  :::card{icon="i-lucide-paintbrush" title="灵活定制"}
-  支持 15+ 种控件类型，可自由配置样式和行为，满足各种表单需求。
+  :::card{icon="i-lucide-package" title="独立组件库"}
+  内置 `DatePicker`、`WithCopy`、`StarRating` 等 10+ 个通用 UI 组件，开箱即用。
   :::
 
-  :::card{icon="i-lucide-blocks" title="模块化架构"}
-  采用模块化设计，未来将持续扩展更多实用组件和工具函数。
+  :::card{icon="i-lucide-wrench" title="通用工具函数"}
+  `useDateFormatter` 等高质量 composables，即使不使用表单系统也可独立使用。
   :::
 ::
 
-## 技术栈
+## 架构分层
 
-Movk Nuxt 基于以下现代技术构建：
+Movk Nuxt 采用清晰的分层架构：
 
-::note{icon="i-lucide-package"}
-**核心依赖**
+::note{icon="i-lucide-layers"}
+**架构层级**
 
-- [**Nuxt UI**](https://ui.nuxt.com) - 提供美观、可访问的基础组件
-- [**Zod v4**](https://zod.dev) - Schema 验证和类型推断
-- [**VueUse**](https://vueuse.org) - 实用的 Vue 组合式函数集合
-- [**@movk/core**](https://github.com/movk/core) - Movk 核心工具库
+- **Core Systems** - AutoForm（已发布）、AutoTable（规划中）
+- **Standalone Components** - DatePicker、StarRating、WithCopy 等独立 UI 组件
+- **Composables** - useDateFormatter、useAutoForm 等通用组合式函数
+- **Foundation** - 基于 [Nuxt UI](https://ui.nuxt.com)、[Zod v4](https://zod.dev)、[VueUse](https://vueuse.org)
 ::
 
-## 当前功能
+## 核心模块
 
-### AutoForm
+### AutoForm - Schema 驱动的表单系统
 
-基于 Zod Schema 的自动表单生成系统，通过声明式的 Schema 定义自动生成完整表单界面。
+基于 Zod Schema 的"定义即渲染"表单解决方案，支持 15+ 种控件类型、布局系统、依赖联动等高级特性。
 
 ::tip{icon="i-lucide-book-open" to="/docs/auto-form"}
 深入了解 AutoForm 的核心概念和使用方法
 ::
 
-## 未来规划
+### 独立组件 - 开箱即用
 
-我们正在积极开发更多实用功能，敬请期待：
+无需依赖 AutoForm，可直接使用的高质量 UI 组件：
 
-- **AutoTable** - 自动表格组件，支持排序、筛选、分页等功能
-- **UseApi** - 统一的 API 请求管理 composable
-- **更多工具函数** - 持续扩展常用的 composables 和工具函数
+- `DatePicker` - 基于国际化标准的日期选择器（单选/范围/多选）
+- `WithCopy` / `WithClear` / `WithPasswordToggle` - 输入增强组件
+- `StarRating` / `ColorChooser` - 交互组件
+
+::tip{icon="i-lucide-box" to="/docs/components/with-character-limit"}
+浏览所有可用组件
+::
+
+### 通用工具函数
+
+- `useDateFormatter` - 强大的日期格式化、解析、范围处理工具
+- `useAutoForm` - AutoForm 的核心逻辑封装
+
+::tip{icon="i-lucide-wrench" to="/docs/composables/use-auto-form"}
+查看所有 Composables
+::
+
+## 开发路线图
+
+::callout{icon="i-lucide-map" color="primary"}
+**正在开发**
+
+- ✅ **AutoForm** - Schema 驱动的表单系统（已发布）
+- 🚧 **AutoTable** - 将复用相同的 Zod Schema，实现定义一次，既生成表单又生成表格
+- 🚧 **UseApi** - 将与 AutoForm 的提交逻辑无缝集成，处理加载状态和错误回显
+::
