docs: 更新文档使用新的日期字段 API
- 全局替换 afz.date() 为 afz.calendarDate()
- 补充控件类型映射表,新增 inputDate 和 inputTime
- 为控件类型表格添加说明列,提升可读性
- 更新 playground 示例代码使用新 API
- 同步更新 README 和 composables 文档

--- a/docs/content/docs/3.auto-form/1.index.md
+++ b/docs/content/docs/3.auto-form/1.index.md
@@ -120,7 +120,7 @@ AutoForm 根据 Zod 类型自动选择对应的 UI 控件：
 | `afz.boolean()` | `UCheckbox`{lang="ts-type"} | 复选框 |
 | `afz.enum()` | `USelect`{lang="ts-type"} | 下拉选择器 |
 | `afz.file()` | `UFileUpload`{lang="ts-type"} | 文件上传 |
-| `afz.date()` | `DatePicker`{lang="ts-type"} | 日期选择器 |
+| `afz.calendarDate()` | `DatePicker`{lang="ts-type"} | 日期选择器 |
 
 ::tip{to="/docs/auto-form/configuration#控件类型映射"}
 查看所有可用的控件类型和自定义映射方式。
