--- a/docs/content/docs/3.auto-form/3.configuration.md
+++ b/docs/content/docs/3.auto-form/3.configuration.md
@@ -214,7 +214,7 @@ afz.email('请输入有效的邮箱地址')
 export default defineAppConfig({
   ui: {
     form: {
-      base: 'space-y-4 min-w-md'
+      base: 'space-y-4 min-w-0 sm:min-w-md'
     },
     collapsible: {
       slots: {
@@ -236,24 +236,28 @@ export default defineAppConfig({
 | `afz.boolean()` | `UCheckbox`{lang="ts-type"} | 复选框 |
 | `afz.enum()` | `USelect`{lang="ts-type"} | 下拉选择器 |
 | `afz.file()` | `UFileUpload`{lang="ts-type"} | 文件上传 |
-| `afz.date()` | `DatePicker`{lang="ts-type"} | 日期选择器 |
+| `afz.calendarDate()` | `DatePicker`{lang="ts-type"} | 日期选择器 |
+| `inputDate` | `UInputDate`{lang="ts-type"} | 日期输入框 |
+| `inputTime` | `UInputTime`{lang="ts-type"} | 时间输入框 |
 
 ### 可用的 type 值
 
-| type 值 | 控件组件 |
-|---------|---------|
-| `textarea` | `UTextarea`{lang="ts-type"} |
-| `switch` | `USwitch`{lang="ts-type"} |
-| `slider` | `USlider`{lang="ts-type"} |
-| `pinInput` | `UPinInput`{lang="ts-type"} |
-| `inputTags` | `UInputTags`{lang="ts-type"} |
-| `selectMenu` | `USelectMenu`{lang="ts-type"} |
-| `inputMenu` | `UInputMenu`{lang="ts-type"} |
-| `checkboxGroup` | `UCheckboxGroup`{lang="ts-type"} |
-| `radioGroup` | `URadioGroup`{lang="ts-type"} |
-| `withClear` | `WithClear`{lang="ts-type"} |
-| `withPasswordToggle` | `WithPasswordToggle`{lang="ts-type"} |
-| `withCopy` | `WithCopy`{lang="ts-type"} |
-| `withCharacterLimit` | `WithCharacterLimit`{lang="ts-type"} |
-| `colorChooser` | `ColorChooser`{lang="ts-type"} |
-| `starRating` | `StarRating`{lang="ts-type"} |
+| type 值 | 控件组件 | 说明 |
+|---------|---------|------|
+| `textarea` | `UTextarea`{lang="ts-type"} | 多行文本输入框 |
+| `switch` | `USwitch`{lang="ts-type"} | 开关切换器 |
+| `slider` | `USlider`{lang="ts-type"} | 滑块选择器 |
+| `pinInput` | `UPinInput`{lang="ts-type"} | PIN 码输入框 |
+| `inputTags` | `UInputTags`{lang="ts-type"} | 标签输入框 |
+| `selectMenu` | `USelectMenu`{lang="ts-type"} | 下拉菜单选择器 |
+| `inputMenu` | `UInputMenu`{lang="ts-type"} | 输入菜单 |
+| `checkboxGroup` | `UCheckboxGroup`{lang="ts-type"} | 复选框组 |
+| `radioGroup` | `URadioGroup`{lang="ts-type"} | 单选框组 |
+| `inputDate` | `UInputDate`{lang="ts-type"} | 日期输入框 |
+| `inputTime` | `UInputTime`{lang="ts-type"} | 时间输入框 |
+| `withClear` | `WithClear`{lang="ts-type"} | 带清除按钮的输入框 |
+| `withPasswordToggle` | `WithPasswordToggle`{lang="ts-type"} | 带密码显示切换的输入框 |
+| `withCopy` | `WithCopy`{lang="ts-type"} | 带复制按钮的输入框 |
+| `withCharacterLimit` | `WithCharacterLimit`{lang="ts-type"} | 带字符计数的输入框 |
+| `colorChooser` | `ColorChooser`{lang="ts-type"} | 颜色选择器 |
+| `starRating` | `StarRating`{lang="ts-type"} | 星级评分器 |
